gac_sb/objects/Note_De_Frais_Depense__c.object
<CustomObject>
    <description>AppNDF : dépense (type taxi, carburant) associée à une note de frais, qui est un ensemble de dépenses associées à un évènement par exemple</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Indemnites_Kilometriques__c</fullName>
        <label>Indémnités kilométriques</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Montant_HT__c</fullName>
        <label>Montant HT</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_TTC__c</fullName>
        <inlineHelpText>help montant</inlineHelpText>
        <label>Montant TTC</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_TVA__c</fullName>
        <label>Montant TVA</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nature_Depense_Categorie__c</fullName>
        <label>Nature dépense catégorie</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nature_Depense__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>help!</inlineHelpText>
        <label>Nature dépense</label>
        <referenceTo>Note_De_Frais_Nature_Depense__c</referenceTo>
        <relationshipLabel>Dépenses note de frais</relationshipLabel>
        <relationshipName>Depenses_note_de_frais</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nombre_De_Kilometres__c</fullName>
        <inlineHelpText>Indiquer le nombre de kilomètres effectués avec votre voiture personnelle au titre d&apos;un déplacement professionnel. 
L&apos;utilisation de votre véhicule personnel doit avoir été autorisé par votre responsable.</inlineHelpText>
        <label>Nombre de kilomètres</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note_De_Frais__c</fullName>
        <label>Note de frais</label>
        <referenceTo>Note_De_Frais__c</referenceTo>
        <relationshipLabel>Dépenses note de frais</relationshipLabel>
        <relationshipName>Depenses_note_de_frais</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Num_PJ__c</fullName>
        <inlineHelpText>Chacune des pièces justificatives doit être numérotée et annexée à la note de frais</inlineHelpText>
        <label>Num PJ</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatutClientBR__c</fullName>
        <label>Statut Client - BR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>En attente</fullName>
                </value>
                <value>
                    <fullName>Envoyé</fullName>
                </value>
                <value>
                    <fullName>Payé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Taux_Indemnites__c</fullName>
        <formula>IF( AND(Nombre_De_Kilometres__c &gt; 0, Indemnites_Kilometriques__c  &gt;0),Indemnites_Kilometriques__c  /Nombre_De_Kilometres__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taux Indemnités</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temp_Key__c</fullName>
        <label>Temp Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalCharges__c</fullName>
        <formula>Montant_HT__c + Montant_TTC__c + Indemnites_Kilometriques__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalCharges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Indemnites_Kilometriques__c + Montant_HT__c +  Montant_TVA__c +  Montant_TTC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Dépense note de frais</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Nature_Depense_Categorie__c</columns>
        <columns>Montant_HT__c</columns>
        <columns>Montant_TTC__c</columns>
        <columns>Montant_TVA__c</columns>
        <columns>Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>NDF-D-{00000}</displayFormat>
        <label>Num Dépense</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dépenses note de frais</pluralLabel>
    <recordTypes>
        <fullName>Autre_Frais</fullName>
        <active>true</active>
        <label>Autre Frais</label>
    </recordTypes>
    <recordTypes>
        <fullName>Frais_Kilometrique</fullName>
        <active>true</active>
        <label>Frais kilométrique</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Description_obligatoire_pour_autres</fullName>
        <active>true</active>
        <errorConditionFormula>AND(CONTAINS( Nature_Depense__r.Name, &apos;Autres&apos;) ,ISBLANK( Description__c ))</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>Le champ description est obligatoire pour les champs de type autres</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Indemnites_obligatoire</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Nature_Depense__r.Type__c , &apos;Frais kilométrique&apos;), OR(ISNULL(    Indemnites_Kilometriques__c ) ,Indemnites_Kilometriques__c  = 0))</errorConditionFormula>
        <errorDisplayField>Indemnites_Kilometriques__c</errorDisplayField>
        <errorMessage>Indémnités kilométriques obligatoires</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Montant_HT_obligatoire</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Nature_Depense__r.Type__c, &apos;HT&apos;) ,OR(ISNULL( Montant_HT__c ) , Montant_HT__c = 0))</errorConditionFormula>
        <errorDisplayField>Montant_HT__c</errorDisplayField>
        <errorMessage>Montant HT obligatoire</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Montant_TTC_obligatoire</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Nature_Depense__r.Type__c , &apos;TTC&apos;),OR(ISNULL( Montant_TTC__c ), Montant_TTC__c = 0))</errorConditionFormula>
        <errorDisplayField>Montant_TTC__c</errorDisplayField>
        <errorMessage>Montant TTC obligatoire</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Montant_TVA_obligatoire</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Nature_Depense__r.Type__c, &apos;HT&apos;) ,ISNULL( Montant_TVA__c ) )</errorConditionFormula>
        <errorDisplayField>Montant_TVA__c</errorDisplayField>
        <errorMessage>Montant TVA obligatoire</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Nb_Kilometres_obligatoire</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(  Nature_Depense__r.Type__c  , &apos;Frais kilométrique&apos;), OR(ISNULL(   Nombre_De_Kilometres__c ) , Nombre_De_Kilometres__c = 0))</errorConditionFormula>
        <errorDisplayField>Nombre_De_Kilometres__c</errorDisplayField>
        <errorMessage>Nombre de kilomètres obligatoire</errorMessage>
    </validationRules>
</CustomObject>